load("@rules_java//java:defs.bzl", "java_binary", "java_test")

java_binary(
    name = "enola-demo",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "dev.enola.demo.CLI",
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//core/lib:lib_java",
        "//core/proto:core_proto_java_library",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)

[java_test(
    name = name[:-len(".java")],
    size = "small",
    srcs = [name],
    resources = glob(["src/test/resources/**/*"]),
    deps = [
        ":enola-demo",
        "//core/proto:core_proto_java_library",
        "//tools/proto",
        "@maven//:com_google_truth_truth",
    ],
) for name in glob([
    "src/test/java/**/*Test.java",
])]
