load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "lib_java",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//core/proto:core_proto_java_library",
    ],
)

[java_test(
    name = name[:-len(".java")],
    size = "small",
    srcs = [name],
    resources = glob(["src/test/resources/**/*"]),
    deps = [
        ":lib_java",
        "//core/proto:core_proto_java_library",
        "@maven//:com_google_truth_truth",
    ],
) for name in glob([
    "src/test/java/**/*Test.java",
])]
