load("@rules_proto//proto:defs.bzl", "proto_library")

# https://rules-proto-grpc.com/en/latest/lang/buf.html#buf-proto-lint-test
load("@rules_proto_grpc//buf:defs.bzl", "buf_proto_lint_test")

# https://rules-proto-grpc.com/en/latest/lang/doc.html#doc-markdown-compile
load("@rules_proto_grpc//doc:defs.bzl", "doc_markdown_compile")

# https://rules-proto-grpc.com/en/latest/lang/java.html#java-proto-library
load("@rules_proto_grpc//java:defs.bzl", "java_proto_library")

# https://rules-proto-grpc.com/en/latest/example.html#step-3-write-a-build-file
proto_library(
    name = "core_proto",
    srcs = ["dev/enola/core/proto/enola_core.proto"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "model_proto",
    srcs = ["dev/enola/core/proto/enola_model.proto"],
    deps = [],
)

java_proto_library(
    name = "core_proto_java_library",
    protos = ["core_proto"],
    visibility = [
        "//connectors:__subpackages__",
        "//core/lib:__pkg__",
    ],
)

doc_markdown_compile(
    name = "core_proto_doc",
    protos = [
        "core_proto",
        "model_proto",
    ],
)

buf_proto_lint_test(
    name = "core_buf_proto_lint",
    size = "small",
    except_rules = [
        "PACKAGE_VERSION_SUFFIX",
        "PACKAGE_DIRECTORY_MATCH",
    ],
    protos = [
        "core_proto",
        "model_proto",
    ],
    use_rules = [
        "DEFAULT",
        "COMMENTS",
    ],
)
