load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "proto",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//connectors:__subpackages__"],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
    ],
)

[java_test(
    name = name[:-len(".java")],
    size = "small",
    srcs = [name],
    resources = glob(["src/test/resources/**/*"]),
    deps = [
        ":proto",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
    ],
) for name in glob([
    "src/test/java/**/*Test.java",
])]
