load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "ui-go_lib",
    srcs = [
        "enola.go",
        "main.go",
    ],
    embedsrcs = ["web/page.template"],
    importpath = "github.com/enola-dev/enola/ui-go/web/ui-go",
    visibility = ["//visibility:private"],
    deps = [
        "//core/lib/src/main/java/dev/enola/core:core_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "ui-go",
    embed = [":ui-go_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "ui-go_test",
    srcs = ["main_test.go"],
    embed = [":ui-go_lib"],
)
