load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ui-go_lib",
    srcs = ["main.go"],
    importpath = "github.com/enola-dev/enola/ui-go/web/ui-go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ui-go",
    embed = [":ui-go_lib"],
    visibility = ["//visibility:public"],
)
